# test-meson-libraries

./: README.md
src/: CMakeLists.txt  meson.build  testbin.cpp  testlib.cpp  testlib.h
